fix scroll effect on ios and fix scale images on galleryPage

--- a/src/sass/galleryPage.scss
+++ b/src/sass/galleryPage.scss
@@ -5,8 +5,10 @@
     }
     @media (min-width: 992px) {
       width: 31%;
-      transition: 0.3s ease;
-      &:hover {
+      img {
+        transition: 0.3s ease;
+      }
+      img:hover {
         transform: scale(1.1);
       }
     }
